gitops/manifests/java_demo_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-demo-app
  labels:
    app: java-demo-app
spec:
  selector:
    matchLabels:
      app: java-demo-app
  template:
    metadata:
      labels:
        app: java-demo-app
    spec:
      containers:
      - name: java-demo-app
        image: 350235531576.dkr.ecr.us-east-1.amazonaws.com/java-demo-app:a8964c4fd8b1378e3285480cdfdd877c76e3945d
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        startupProbe:
          httpGet:
            path: /health
            port: 8080
          failureThreshold: 30
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
