gitops/manifests/java_demo_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-demo-app-svc
spec:
  selector:
     app: java-demo-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
