gitops/manifests/java_demo_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-app-ingress
spec:
  ingressClassName: nginx  # Tells NGINX to handle this, NOT the ALB
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: java-demo-app-svc
                port:
                  number: 80
